
System
* New: Added a new slash command /kbmbuffs. You can macro this with %t or manually type a name to return a list of buffs with KBM ID's on that Unit. (Players or NPC's)
* Change: Ability IDs have been changed to the new format for Rift 1.9 and above. This will cause compatibility issues with older KBMs.
* Change: Buff Add events triggered for already cached buffs are now ignored.
* Removed: Global reference to bDetails in Buff Remove handlers.
* Removed: Global reference to TriggerObj in Buff Remove handlers.
* Removed: Global reference to TriggerObj in Buff Add handlers.
* Removed: Global reference to TriggerMod in Buff Add handlers.

CPU Monitor
* New: Added support for Ready Check CPU tracking.

Tank-Swap
* Fixed: Very rare case where Debuff.remaining could return nil. (Generally due to lag)

Rez Master
* Fixed: Actually applied the fix correctly from the last Revision this time.

Infernal Dawn
* Laethys
** New: Added Touch of Gold personal alert for P3. This will only show your timer.
** Fixed: Corrected Phase Two Start trigger.
** Change: Added the % (pattern matching escape code) before ? in an attempt to get this to trigger the Phase Two Transition capture.
** Change: Phase 1 objective now reads 51% rather than the incorrect 50%.

Master Mode Caduceus Rise
* Ashcaller Zael
** Fixed: Stopped the smaller Adds from overwriting the bosses UID, enabling the encounter to finally trigger a victory.

Chronicles
* Fixed: Disabled Chronicles will no longer partially initialize, and will instead be completely ignored.

Russian Translations
* Updated

----
v1.2.2

Castbars
* Change: All Boss castbars now inherit the global Style setting (KBM or Rift).

Colors
* New: Added Pink to the list of available colors for Alerts, Timers, Text and Mechanic Spies.
* New: Added Dark Grey to the list of available colors for Alerts, Timers, Text and Mechanic Spies.
* Change: Purple is now... more purple.

Chat Output