@@ -9,7 +9,7 @@ Author = "Paul Snart"
 Website = "http://twitter.com/#!/psnart"
 Email = "snarty@gmail.com"
 
-Version = "1.1.9"
+Version = "1.2.0"
 
 Environment = "1.9"
 
