@@ -39,6 +39,7 @@ System
 * New: Added a new slash command /kbmbuffs. You can macro this with %t or manually type a name to return a list of buffs with KBM ID's on that Unit. (Players or NPC's)
 * Change: Ability IDs have been changed to the new format for Rift 1.9 and above. This will cause compatibility issues with older KBMs.
 * Change: Buff Add events triggered for already cached buffs are now ignored.
+* Change: Updated LibSRM to 1.2.0 which now includes LibUnitChange 2.1
 * Removed: Global reference to bDetails in Buff Remove handlers.
 * Removed: Global reference to TriggerObj in Buff Remove handlers.
 * Removed: Global reference to TriggerObj in Buff Add handlers.
@@ -67,8 +68,9 @@ Master Mode Caduceus Rise
 Chronicles
 * Fixed: Disabled Chronicles will no longer partially initialize, and will instead be completely ignored.
 
-Russian Translations
-* Updated
+Translations
+* Russian Updates
+* German Updates
 
 ----
 v1.2.2
